# janggi-engine

./: .gitignore  NN_GUIDE.md  Procfile  README.md  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  scripts_build_book.md  server.py  setup.py
.github/workflows/: tests.yml
data/: opening_book.json
gibo_data/: g13.json  g14.json  g17.json  g18.json  g19.json  janggi-gibo-2026-06-18-16-27-03.json  janggi-gibo-2026-06-18-16-42-32.json  janggi-gibo-2026-06-18-17-06-03.json  janggi-gibo-2026-06-18-17-43-21.json  janggi-gibo-2026-06-19-12-04-46.json  janggi-gibo-2026-06-19-12-17-48.json  janggi-gibo-2026-06-19-12-50-32.json  janggi-gibo-2026-06-19-13-08-03.json  w1.json  w2.json  w3.json
gibo_wins/: g12.json  g16.json  janggi-gibo-2026-06-18-17-22-41.json  janggi-gibo-2026-06-19-10-47-16.json  janggi-gibo-2026-06-19-12-25-52.json  janggi-win-cho-2026-06-21-12-16-46.json  janggi-win-han-2026-06-21-12-32-11.json
janggi/: __init__.py  _attack.pyx  board.py  book.py  cli.py  evaluate.py  gibo.py  nn_encode.py  nn_eval.py  nn_model.py  repetition.py  score.py  search.py  see.py  selfplay.py  train.py
templates/: index.html
tests/: test_engine.py
